test/k8s/np-deny-ingress-to-events.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-to-event-service
  namespace: fog
spec:
  podSelector:
    matchLabels:
      app: event-service
  policyTypes: ["Ingress"]
  ingress: []  # deny all ingress
